Update ledger configuration
- Companion apps only work on the `test` and Sovrin MainNet ledgers.

Signed-off-by: Wade Barnes <wade.barnes@shaw.ca>

--- a/openshift/templates/agent/agent-deploy.yaml
+++ b/openshift/templates/agent/agent-deploy.yaml
@@ -382,7 +382,7 @@ parameters:
     displayName: Genesis File URL
     description: The URL from which the genesis file can be downloaded.
     required: true
-    value: http://dev.bcovrin.vonx.io/genesis
+    value: http://test.bcovrin.vonx.io/genesis
   - name: LOG_LEVEL
     displayName: Log Level
     description: The logging level for the agent.
