Update pipeline configurations and settings
Signed-off-by: Wade Barnes <wade.barnes@shaw.ca>

--- a/jenkins/backup/Jenkinsfile
+++ b/jenkins/backup/Jenkinsfile
@@ -28,6 +28,7 @@ node {
   stage("Deploy ${config.DEPLOYMENT_ENVIRONMENT_TAGS[0]}") {
     script {
       deploy("${config.APP_NAME}",
+             "${config.PREFIX}",
              "${config.SUFFIX}",
              "${config.NAME_SPACE}",
              "${config.DEPLOYMENT_ENVIRONMENT_TAGS[0]}")
