--- a/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
+++ b/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
@@ -51,6 +51,30 @@ objects:
         name: ${NAME}${SUFFIX}
         weight: 100
 
+  - kind: Route
+    apiVersion: v1
+    metadata:
+      name: ${NAME}-admin${SUFFIX}
+      labels:
+        name: ${NAME}${SUFFIX}
+        app: ${APP_NAME}${SUFFIX}
+        app-group: ${APP_GROUP}
+        role: ${ROLE}
+        env: ${TAG_NAME}
+      annotations:
+        haproxy.router.openshift.io/timeout: ${ROUTE_TIMEOUT}
+    spec:
+      host: ${ADMIN_APPLICATION_DOMAIN}
+      port:
+        targetPort: ${NAME}-admin
+      tls:
+        insecureEdgeTerminationPolicy: Redirect
+        termination: edge
+      to:
+        kind: Service
+        name: ${NAME}${SUFFIX}
+        weight: 100
+
   - kind: Secret
     apiVersion: v1
     metadata:
@@ -79,6 +103,7 @@ objects:
         env: ${TAG_NAME}
     stringData:
       admin-api-key: ${ADMIN_API_KEY}
+      webhook-url: ${WEBHOOK_URL}
     type: Opaque
 
   - kind: DeploymentConfig
@@ -182,7 +207,10 @@ objects:
                       name: ${WALLET_CREDENTIAL_STORE_NAME}${SUFFIX}
                       key: did
                 - name: WEBHOOK_URL
-                  value: ${WEBHOOK_URL}
+                  valueFrom:
+                    secretKeyRef:
+                      name: ${NAME}${SUFFIX}
+                      key: webhook-url
                 - name: HTTP_INTERFACE_PORT
                   value: ${AGENT_HTTP_PORT}
                 - name: ADMIN_INTERFACE_PORT
@@ -321,9 +349,14 @@ parameters:
     value: agent
   - name: APPLICATION_DOMAIN
     displayName: Application Hostname
-    description: The exposed hostname that will route to the service, if left blank a value will be defaulted.
+    description: The exposed hostname that will route to the public service endpoint, if left blank a value will be defaulted.
     required: false
     value: issuer-kit-agent.pathfinder.gov.bc.ca
+  - name: ADMIN_APPLICATION_DOMAIN
+    displayName: Admin Application Hostname
+    description: The exposed hostname that will route to the admin service endpoint, if left blank a value will be defaulted.
+    required: false
+    value: issuer-kit-agent-admin.pathfinder.gov.bc.ca
   - name: IMAGE_NAMESPACE
     displayName: Namespace containing application images.
     required: true
