--- a/openshift/templates/backup/config/backup.conf
+++ b/openshift/templates/backup/config/backup.conf
@@ -49,6 +49,7 @@
 postgres=vc-authn-database/vc_authn
 postgres=vc-authn-wallet/vc_authn_agent_wallet
 postgres=wallet-lsbc/agent-lsbc-wallet
+postgres=wallet-prime/agent-prime-wallet
 
 # Schedule backup for 1am PST; system TZ is PST
 0 1 * * * default ./backup.sh -s
