Fix ROUTE_TIMEOUT for issuer-agent deployment configuration.
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
+++ b/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
@@ -383,6 +383,11 @@ parameters:
     displayName: Admin Application Hostname
     description: The exposed hostname that will route to the admin service endpoint, if left blank a value will be defaulted.
     required: false
+  - name: ROUTE_TIMEOUT
+    displayName: Route Timeout
+    description: The timeout for the application route.  When this timeout is exceeded the application's route will respond with a 504 Gateway Timeout error.
+    required: true
+    value: 120s
     value: issuer-kit-agent-admin.pathfinder.gov.bc.ca
   - name: IMAGE_NAMESPACE
     displayName: Namespace containing application images.
