--- a/openshift/templates/issuer-web/config/a2a/claim-config.json
+++ b/openshift/templates/issuer-web/config/a2a/claim-config.json
@@ -2,36 +2,37 @@
   "questions": [
     {
       "type": "text",
-      "name": "ppid",
+      "name": "PPID",
       "title": "PPID:",
       "isRequired": true,
       "requiredErrorText": "Required Field"
     },
     {
       "type": "text",
-      "name": "given_name",
+      "name": "Given Name",
       "title": "First Name:",
       "isRequired": true,
       "requiredErrorText": "Required Field"
     },
     {
       "type": "text",
-      "name": "surname",
+      "name": "Surname",
       "title": "Last Name:",
       "isRequired": true,
       "requiredErrorText": "Required Field"
     },
     {
       "type": "radiogroup",
-      "name": "membership_status",
+      "name": "Membership Status",
       "title": "Membership Status:",
       "isRequired": true,
       "requiredErrorText": "Required Field",
       "hasNone": false,
-      "colCount": 2,
+      "colCount": 3,
       "choices": [
-        "Active",
-        "Inactive"
+        "PRAC",
+        "FORM",
+        "OTHER"
       ]
     }
   ],
