--- a/openshift/templates/agent/agent-deploy.yaml
+++ b/openshift/templates/agent/agent-deploy.yaml
@@ -216,18 +216,24 @@ objects:
                   protocol: TCP
                 - containerPort: ${{AGENT_HTTP_PORT}}
                   protocol: TCP
+
               readinessProbe:
                 timeoutSeconds: 30
                 initialDelaySeconds: 3
-                httpGet:
-                  path: /
-                  port: ${{AGENT_HTTP_PORT}}
+                exec:
+                  command:
+                    - bash
+                    - "-c"
+                    - 'curl --fail "http://localhost:${ADMIN_INTERFACE_PORT}/status/ready" -H "X-API-KEY: ${AGENT_ADMIN_API_KEY}"'
               livenessProbe:
                 timeoutSeconds: 30
                 initialDelaySeconds: 300
-                httpGet:
-                  path: /
-                  port: ${{AGENT_HTTP_PORT}}
+                exec:
+                  command:
+                    - bash
+                    - "-c"
+                    - 'curl --fail "http://localhost:${ADMIN_INTERFACE_PORT}/status/live" -H "X-API-KEY: ${AGENT_ADMIN_API_KEY}"'
+
               imagePullPolicy: IfNotPresent
               resources:
                 limits:
@@ -400,7 +406,7 @@ parameters:
     displayName: Set read only ledger flag.
     description: Enable/Disable the read only ledger flag.  Controls the inclusion/exclusion of the agent '--read-only-ledger' startup parameter.  Defaults to disabled.
     required: false
-    value: ''
+    value: ""
   # ===============================================================================
   # Wallet Configuration
   #--------------------------------------------------------------------------------
