Update vc-authn agent configuration
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/agent/agent-deploy.yaml
+++ b/openshift/templates/agent/agent-deploy.yaml
@@ -202,8 +202,8 @@ objects:
                       key: admin-api-key
                 - name: AGENT_NAME
                   value: ${AGENT_LABEL_NAME}
-                # - name: AGENT_ENDPOINT
-                #   value: https://${APPLICATION_DOMAIN}
+                - name: AGENT_ENDPOINT
+                  value: https://${APPLICATION_DOMAIN}
                 - name: AGENT_LOG_LEVEL
                   value: ${LOG_LEVEL}
                 - name: TIMING
