--- a/openshift/templates/tails-server/tails-server-deploy.yaml
+++ b/openshift/templates/tails-server/tails-server-deploy.yaml
@@ -4,6 +4,32 @@ apiVersion: v1
 metadata:
   name: ${NAME}${SUFFIX}
 objects:
+  - kind: NetworkPolicy
+    apiVersion: networking.k8s.io/v1
+    metadata:
+      name: ${NAME}${SUFFIX}-allow-ingress
+      labels:
+        name: ${NAME}${SUFFIX}-allow-ingress
+        app: ${APP_NAME}${SUFFIX}
+        app-group: ${APP_GROUP}
+        role: ${ROLE}
+        env: ${TAG_NAME}
+    spec:
+      description: |
+        Allow traffic from routes into the tails server container(s).
+      ingress:
+        - from:
+            - namespaceSelector:
+                matchLabels:
+                  network.openshift.io/policy-group: ingress
+      podSelector:
+        matchLabels:
+          role: ${ROLE}
+          app: ${APP_NAME}${SUFFIX}
+          env: ${TAG_NAME}
+      policyTypes:
+        - Ingress
+
   - kind: Service
     apiVersion: v1
     metadata:
@@ -74,9 +100,9 @@ objects:
             env: ${TAG_NAME}
         spec:
           volumes:
-          - name: "${NAME}${SUFFIX}"
-            persistentVolumeClaim:
-              claimName: "${NAME}${SUFFIX}"
+            - name: "${NAME}${SUFFIX}"
+              persistentVolumeClaim:
+                claimName: "${NAME}${SUFFIX}"
           containers:
             - name: ${NAME}${SUFFIX}
               command:
@@ -119,8 +145,8 @@ objects:
                   cpu: ${CPU_REQUEST}
                   memory: ${MEMORY_REQUEST}
               volumeMounts:
-              - name: "${NAME}${SUFFIX}"
-                mountPath: "${STORAGE_PATH}"
+                - name: "${NAME}${SUFFIX}"
+                  mountPath: "${STORAGE_PATH}"
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
           dnsPolicy: ClusterFirst
@@ -170,7 +196,7 @@ objects:
     spec:
       storageClassName: ${PERSISTENT_VOLUME_CLASS}
       accessModes:
-      - ${PERSISTENT_VOLUME_ACCESS_MODE}
+        - ${PERSISTENT_VOLUME_ACCESS_MODE}
       resources:
         requests:
           storage: ${PERSISTENT_VOLUME_SIZE}
@@ -205,7 +231,7 @@ parameters:
     displayName: Application Hostname
     description: The exposed hostname that will route to the service, if left blank a value will be defaulted.
     required: false
-    value: tails-server-dev.pathfinder.gov.bc.ca
+    value: tails-server-dev.apps.silver.devops.gov.bc.ca
   - name: ROUTE_TIMEOUT
     displayName: Route Timeout
     description: The timeout for the application route.  When this timeout is exceeded the application's route will respond with a 504 Gateway Timeout error.
@@ -214,7 +240,7 @@ parameters:
   - name: IMAGE_NAMESPACE
     displayName: Namespace containing application images.
     required: true
-    value: nnfbch-tools
+    value: e79518-tools
   - name: TAG_NAME
     displayName: Environment TAG name
     description: The TAG name for this environment, e.g., dev, test, prod.
