Updated global project settings
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/certificate.conf
+++ b/openshift/certificate.conf
@@ -8,5 +8,5 @@
 # The entries must be in the following form:
 # - projectName,routeName,certFilename,pkFilename
 # -----------------------------------------------------------------------------------------------
-nnfbch-prod,tails-server,Combined.crt,private.key
-nnfbch-prod,tails-server-vonx,CertificateBundle.pem,vonx-private.key
+e79518-prod,tails-server,Combined.crt,private.key
+e79518-prod,tails-server-vonx,CertificateBundle.pem,vonx-private.key
