Tweaks to database, wallet KSP
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/database/database-deploy.yaml
+++ b/openshift/templates/database/database-deploy.yaml
@@ -24,7 +24,7 @@ objects:
         - from:
             - podSelector:
                 matchLabels:
-                  role: ${CONTROLLER_ROLE}
+                  role: ${PREFIX}${CONTROLLER_ROLE}
                   app: ${APP_NAME}
                   app-group: ${APP_GROUP}
                   env: ${TAG_NAME}
